--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_map">Hello map!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_show_map">ShowMap</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
