--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_show_map">ShowMap</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="settings_login_button">Login</string>
 </resources>
