--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="settings_login_button">Login</string>
+    <string name="start_location_recording">Start Recording</string>
+    <string name="stop_location_recording">Stop Recording</string>
 </resources>
