--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="title_activity_authenticator">Authenticator</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_example2">Example2Activity</string>
+    <string name="title_activity_example1">Example1Activity</string>
+
+
 </resources>
