--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_example2">Example2Activity</string>
     <string name="title_activity_example1">Example1Activity</string>
+    <string name="title_activity_login">LoginActivity</string>
 
 
 </resources>
